--- a/Example5/Example5Window.xaml
+++ b/Example5/Example5Window.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfBindingExample"
         mc:Ignorable="d"
-        Title="Простой MVVM - Автомобили" Height="400" Width="700">
+        Title="Простой MVVM - Автомобили" Height="440" Width="700">
     <!-- http://streletzcoder.ru/realizatsiya-patterna-mvvm-na-primere-c-wpf-nestrogiy-variant/ -->
     <Grid>
         <Grid.ColumnDefinitions>
@@ -18,6 +18,8 @@
                 <Button Click="Delete_Click" >-</Button>
             </UniformGrid>
             <TextBlock Text="Выбранный автомобиль" TextAlignment="Center" FontWeight="Bold"/>
+            <Image Source="{Binding ImagePath}" Height="100"/>
+            <TextBox Text="{Binding ImagePath, UpdateSourceTrigger=PropertyChanged}" />
             <TextBlock Text="Модель" />
             <TextBox Text="{Binding Model, UpdateSourceTrigger=PropertyChanged}" />
             <TextBlock Text="Максимальная скорость, км/ч" />
@@ -32,6 +34,7 @@
                 <ListBox.ItemTemplate>
                     <DataTemplate>
                         <StackPanel Margin="5,5,5,10">
+                            <Image Source="{Binding ImagePath}" Height="40"/>
                             <TextBlock FontSize="22" FontWeight="Bold" Text="{Binding Path=Model}" />
                             <TextBlock Text="{Binding Path=MaxSpeed, StringFormat=##0.00км/ч, ConverterCulture=ru-ru}" />
                             <TextBlock Text="{Binding Path=Price, StringFormat=C2, ConverterCulture=ru-ru}" />
